src/ceal/tests/bug/902.gold
Error: ('902c.inc' line 1:1 'a') Cannot resolve 'a'
