src/ceal/tests/bug/902.sct
.include "902a.inc"
.include "902b.inc"

